this commit will return the app to a previous color scheme and fix hard to read text.

--- a/css/story.css
+++ b/css/story.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #D3DDE3;
+  background-color: #2a09b0;
 }
 
 h1 {
